plugins {
    id 'java'
    id 'org.graalvm.buildtools.native' version '0.10.4' apply false
}

group = 'com.arayby'
version = '1.2.0-SNAPSHOT'

apply from: 'gradle/tasks.gradle'

subprojects {
    apply plugin: 'java'

    java {
        sourceCompatibility = JavaVersion.VERSION_25
        targetCompatibility = JavaVersion.VERSION_25
    }

    repositories {
        mavenCentral()
    }

    dependencies {
        testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

        testImplementation 'org.assertj:assertj-core:3.27.3'
        testImplementation 'org.junit.jupiter:junit-jupiter:5.12.2'
    }

    test {
        useJUnitPlatform()
    }

    tasks.withType(JavaCompile).configureEach {
        options.encoding = 'UTF-8'
        options.compilerArgs += ['--enable-preview']
    }

    tasks.withType(Test).configureEach {
        jvmArgs '--enable-preview'
    }

    tasks.withType(JavaExec).configureEach {
        jvmArgs '--enable-preview'
    }
}

subprojects {
    tasks.build.dependsOn rootProject.tasks.validateChangelog
    tasks.build.dependsOn rootProject.tasks.validateVersionSync
}
